# MangoHud-2

./: .gitmodules  PKGBUILD  README.md  meson.build
client/: main.cpp  meson.build
common/: gpu_metrics.hpp  helpers.cpp  helpers.hpp  log_errno.hpp  socket.cpp
server/: amdgpu.cpp  amdgpu.hpp  fdinfo.cpp  fdinfo.hpp  gpu.cpp  gpu.hpp  hwmon.cpp  hwmon.hpp  intel.cpp  intel.hpp  main.cpp  meson.build
